// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariableSizeGrid scrollToItem method should scroll to the correct item for align = "auto" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 1,
      "overscanRowStopIndex": 6,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 5,
      "visibleRowStartIndex": 2,
      "visibleRowStopIndex": 5,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 7,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 5,
      "visibleRowStartIndex": 8,
      "visibleRowStopIndex": 10,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 7,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 8,
      "visibleRowStopIndex": 10,
    },
  ],
]
`;

exports[`VariableSizeGrid scrollToItem method should scroll to the correct item for align = "center" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 2,
      "overscanColumnStopIndex": 8,
      "overscanRowStartIndex": 2,
      "overscanRowStopIndex": 8,
      "visibleColumnStartIndex": 3,
      "visibleColumnStopIndex": 7,
      "visibleRowStartIndex": 3,
      "visibleRowStopIndex": 7,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 7,
      "overscanRowStartIndex": 1,
      "overscanRowStopIndex": 7,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 6,
      "visibleRowStartIndex": 2,
      "visibleRowStopIndex": 6,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 5,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 16,
      "overscanRowStopIndex": 19,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 17,
      "visibleRowStopIndex": 19,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 8,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 9,
      "visibleRowStopIndex": 11,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 8,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 1,
      "visibleColumnStopIndex": 5,
      "visibleRowStartIndex": 9,
      "visibleRowStopIndex": 11,
    },
  ],
]
`;

exports[`VariableSizeGrid scrollToItem method should scroll to the correct item for align = "end" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 1,
      "overscanRowStopIndex": 6,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 5,
      "visibleRowStartIndex": 2,
      "visibleRowStopIndex": 5,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 5,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 1,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 1,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 7,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 8,
      "visibleRowStopIndex": 10,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 7,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 8,
      "visibleRowStopIndex": 10,
    },
  ],
]
`;

exports[`VariableSizeGrid scrollToItem method should scroll to the correct item for align = "start" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 4,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 4,
      "overscanRowStopIndex": 9,
      "visibleColumnStartIndex": 5,
      "visibleColumnStopIndex": 8,
      "visibleRowStartIndex": 5,
      "visibleRowStopIndex": 8,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 3,
      "overscanColumnStopIndex": 8,
      "overscanRowStartIndex": 3,
      "overscanRowStopIndex": 8,
      "visibleColumnStartIndex": 4,
      "visibleColumnStopIndex": 7,
      "visibleRowStartIndex": 4,
      "visibleRowStopIndex": 7,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 16,
      "overscanRowStopIndex": 19,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 17,
      "visibleRowStopIndex": 19,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 9,
      "overscanRowStopIndex": 13,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 10,
      "visibleRowStopIndex": 12,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 9,
      "overscanRowStopIndex": 13,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 10,
      "visibleRowStopIndex": 12,
    },
  ],
]
`;
